refactor: decouple categories resource from database schema
